Fixes column layout bug in Bootstrap.

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,12 @@ h2 {
 .img-circle {
   border: 3px solid #444;
   border-radius: 50%;
+  object-fit: cover;
+}
+
+.img-wide{
+	width: 100%;
+  padding-top: 4rem;
 }
 
 
